<resources>
    <string name="app_name">InventApp</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="password">Digite Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="digite_el_nombre">Digite el nombre</string>
    <string name="telefono">Telefono</string>
    <string name="repetir_password">Repetir Password</string>
    <string name="registrar">Registrar</string>
    <string name="resultado">Resultado</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="cine">Cine</string>
    <string name="series">Series</string>
    <string name="leer">Leer</string>
    <string name="gimnasio">Gimnasio</string>
    <string name="genero">Genero</string>
    <string name="msg_error_campos_vacios">Debe digitar todos los campos</string>
    <string name="nombre_lb">Nombre:</string>
    <string name="correo_lb">Correo:</string>
    <string name="telefono_lb">Telefono:</string>
    <string name="contraseña_lb">Contraseña:</string>
    <string name="pasatiempo_lb">Pasatiempo:</string>
    <string name="correo">correo:</string>
    <string name="sexo_lb">Sexo:</string>
    <string name="ciudad_lb">Ciudad:</string>
    <string name="sexo">sexo</string>
    <string name="pasatiempos">pasatiempos:</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string-array name="city_list">
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Cali</item>
        <item>Manizales</item>
        <item>Santa Marta</item>
    </string-array>
</resources>
